<resources>
    <string name="app_name">银保</string>
    <string name="goback">返回</string>
    <string name="index">首页</string>
    <string name="loading_msg">加载中...</string>
    <string name="username_hint">请输入您的手机号/用户名</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="do_login">登录</string>
    <string name="register">没有账户？注册一个</string>
    <string name="find_pwd_help_text">忘记密码？</string>
    <string name="login_title">账号登录</string>
    <string name="phone_input_hint">请输入您的手机号</string>
    <string name="pwd_input_hint">请输入6-20位字符的密码</string>
    <string name="checkcode_input_hint">请输入手机验证码</string>
    <string name="get_checkcode_hint">获取验证码</string>
    <string name="register_agreement">软件许可及服务协议</string>
    <string name="submit">确定</string>
    <string name="pwd_input_again_hint">请确认密码</string>
    <string name="get_picture_checkcode_hint">图片</string>
    <string name="picture_checkcode_input_hint">请输入图片验证码</string>
    <string name="title_register">免费注册</string>
    <string name="number_enable_checkcode">%s秒后重试</string>
    <string name="getting_check_code">正在获取验证码</string>
    <string name="send_smscode_success">验证码已发送至您的手机</string>
    <string name="exit">退出</string>
    <string name="find_pwd_title">找回密码</string>
    <string name="tab_discount_info_text">优惠资讯</string>
    <string name="tab_payback_plan_text">还款计划</string>
    <string name="tab_profile_text">我的</string>
    <string name="exit_warning">再按一次退出软件</string>
    <string name="profile_title">我的信息</string>
    <string name="profile_name">姓名</string>
    <string name="profile_name_hint">请输入姓名</string>
    <string name="profile_button_modify_pwd">修改密码</string>
    <string name="profile_phone_hint">请输入联系电话</string>
    <string name="profile_ID_hint">请输入身份证号</string>
    <string name="profile_vehicle_hint">请输入车牌号</string>
    <string name="profile_orders">我的订单</string>
    <string name="oldpwd_hint">请输入原始密码</string>
    <string name="oldpwd_text">原始密码</string>
    <string name="newpwd_text">新密码</string>
    <string name="newpwd_again_text">确认新密码</string>
    <string name="new_pwd_input_again_hint">请再次输入新密码</string>
    <string name="pwd_modify_save">保存</string>
    <string name="update_pwd_title">修改密码</string>
    <string name="payback_plan_title">还款计划</string>
    <string name="discount_info_title">优惠资讯</string>
    <string name="rememberPwd_text">记住密码</string>
    <string name="login_register">注册</string>
    <string name="register_text">提交</string>
    <string name="do_register">正在注册....</string>
    <string name="register_success">注册成功</string>
    <string name="login_failed">登录失败</string>
    <string name="reset_pwd_title">重设密码</string>
    <string name="reset_pwd_success">找回密码成功</string>
    <string name="modify_pwd_success">修改密码成功</string>
    <string name="logout_text">注销</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="bindinfo_name">姓名：</string>
    <string name="bindinfo_idcard">身份证号：</string>
    <string name="bindinfo_carno">车牌号：</string>
    <string name="bind_info_name_hint">请输入姓名</string>
    <string name="bind_info_carno_hint">请输入车牌号</string>
    <string name="bind_info_idcard_hint">请输入身份证号码</string>
    <string name="btnBindInfo">绑定信息</string>
    <string name="bind_info_title">信息绑定</string>

    <string name="code_success">发送成功</string>
    <string name="code_cancel">发送取消</string>
    <string name="code_deny">发送被拒绝</string>
    <string name="code_unsupported">不支持错误</string>
    <string name="code_unknown">发送返回</string>
    <string name="exit_warm">再按一次退出</string>
    <string name="my_youhui_html">http://yinbao.chhgroup.cn/yinbao/my_youhui.html</string>
    <string name="my_plan_html">http://yinbao.chhgroup.cn/yinbao/my_plan.html</string>
    <string name="continue_text">继续</string>

    <string name="copyright">&#169;</string>
    <string name="company_name_text">深圳市创辉煌信息科技有限公司</string>
    <string name="re_login">重新登录</string>

</resources>
