<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/custom_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/body_color"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/login_edit_height"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:text="@string/oldpwd_text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etOldPwd"
                style="@style/input_edit_style"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/layout_padding"
                android:background="@drawable/shape_wihte_frame"
                android:ems="19"
                android:hint="@string/oldpwd_hint"
                android:maxEms="16"
                android:maxLength="16"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/transparent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/login_edit_height"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:text="@string/newpwd_text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNewPwd"
                style="@style/input_edit_style"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/layout_padding"
                android:background="@drawable/shape_wihte_frame"
                android:ems="19"
                android:hint="@string/pwd_input_hint"
                android:maxEms="16"
                android:maxLength="16"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/transparent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/login_edit_height"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newpwd_again_text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNewPwdAgain"
                style="@style/input_edit_style"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/layout_padding"
                android:background="@drawable/shape_wihte_frame"
                android:ems="19"
                android:hint="@string/new_pwd_input_again_hint"
                android:maxEms="16"
                android:maxLength="16"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true" />
        </LinearLayout>

        <Button
            style="@style/btn_orange_style"
            android:layout_width="@dimen/login_btn_width"
            android:layout_height="@dimen/login_btn_height"
            android:layout_marginTop="30dp"
            android:onClick="updatePwdClick"
            android:text="@string/pwd_modify_save" />

    </LinearLayout>

</LinearLayout>

