<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <include layout="@layout/custom_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@mipmap/logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/login_edit_height"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_wihte_frame"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/login_user_icon" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="2dp"
                android:background="#EEEFFF" />

            <EditText
                android:id="@+id/etLoginMobile"
                style="@style/input_edit_style"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/layout_padding"
                android:background="#00000000"
                android:ems="19"
                android:hint="@string/username_hint"
                android:maxEms="20"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="1dp"
                android:singleLine="true" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/transparent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/login_edit_height"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape_wihte_frame"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/login_password_icon" />

            <View
                android:id="@+id/viewLoginPassword"
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="2dp"
                android:background="#EEEFFF" />

            <EditText
                android:id="@+id/etLoginPassword"
                style="@style/input_edit_style"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/layout_padding"
                android:background="#00000000"
                android:ems="19"
                android:hint="@string/pwd_hint"
                android:inputType="textPassword"
                android:maxEms="16"
                android:maxLength="16"
                android:maxLines="1"
                android:padding="1dp"
                android:singleLine="true" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:padding="@dimen/layout_padding">

            <CheckBox
                android:id="@+id/rememberPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/checkbox_bg"
                android:button="@null"
                android:checked="true" />

            <TextView
                android:id="@+id/textAgreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toRightOf="@id/rememberPwd"
                android:text="@string/rememberPwd_text"
                android:textColor="@color/btn_orange_color" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="vertical">

                <TextView
                    style="@style/body_content_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="findPwdClick"
                    android:text="@string/find_pwd_help_text"
                    android:textColor="@color/btn_orange_color" />

                <View
                    android:layout_width="65dp"
                    android:layout_height="1dp"
                    android:background="@color/btn_orange_color" />
            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/btnLogin"
            style="@style/btn_orange_style"
            android:layout_width="@dimen/login_btn_width"
            android:layout_height="@dimen/login_btn_height"
            android:layout_marginTop="20dp"
            android:onClick="loginClick"
            android:text="@string/do_login" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/ivWechat"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="35dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="80dp"
                    android:layout_height="2dp"
                    android:background="@color/color_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:text="其他登录方式" />

                <View
                    android:layout_width="80dp"
                    android:layout_height="2dp"
                    android:background="@color/color_gray" />

            </LinearLayout>

            <ImageView
                android:id="@+id/ivWechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="50dp"
                android:src="@mipmap/wechat_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="25dp"
                android:text="微信" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
